--- a/motifdjango/motifapp/static/stylesheet/main.scss
+++ b/motifdjango/motifapp/static/stylesheet/main.scss
@@ -1,14 +1,9 @@
 @import "bootstrap/scss/bootstrap.scss";
 
-
-
 //for card column view, change the number of cards display in a row
-.card-columns {
-  @include media-breakpoint-only(sm) {
-    column-count: 2;
-  }
+.card-deck {
   @include media-breakpoint-only(md) {
-    column-count: 3;
+    column-count: 1;
   }
   @include media-breakpoint-only(lg) {
     column-count: 3;
