--- a/motifdjango/motifapp/templates/motifapp/star_rating_template.html
+++ b/motifdjango/motifapp/templates/motifapp/star_rating_template.html
@@ -1,48 +1,39 @@
+{% load motifapp_extra %}
+
+
 <!-- Modal -->
 <div id="myModal" class="modal fade" role="dialog">
     <div class="modal-dialog">
         <!-- Modal content-->
         <div class="modal-content">
-            <div class="modal-header">
+            <div class="modal-header" style="padding: 3px 15px 3px;">
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
-                <h4 class="modal-title">Modal Header</h4>
             </div>
             <div class="modal-body">
                 <div class="creative-star-rating">
-                    <form role ="form" method="post" action="{% url 'motifapp:rating_edit' article.id %}" enctype="multipart/form-data">{% csrf_token %}
-                        <div class="col-md-8">
-                            <input class="star creative-star-5" id="creative-star-5" type="radio" value="5" name="creative-star"/>
-                            <label class="star creative-star-5" for="creative-star-5"></label>
-                            <input class="star creative-star-4" id="creative-star-4" type="radio" value="4" name="creative-star"/>
-                            <label class="star creative-star-4" for="creative-star-4"></label>
-                            <input class="star creative-star-3" id="creative-star-3" type="radio" value="3" name="creative-star"/>
-                            <label class="star creative-star-3" for="creative-star-3"></label>
-                            <input class="star creative-star-2" id="creative-star-2" type="radio" value="2" name="creative-star"/>
-                            <label class="star creative-star-2" for="creative-star-2"></label>
-                            <input class="star creative-star-1" id="creative-star-1" type="radio" value="1" name="creative-star"/>
-                            <label class="star creative-star-1" for="creative-star-1"></label>
+                    <form role="form" method="post"
+                          action="{% url 'motifapp:rating_edit' article.id %}"
+                          enctype="multipart/form-data">{% csrf_token %}
+                        <div class="row">
+                            <div class="col-10">
+                                {% for i in "xxxxxxxxxx" %}
+                                <input class="star creative-star-{{ 11|sub:forloop.counter }}"
+                                       id="creative-star-{{ 11|sub:forloop.counter }}" type="radio"
+                                       value={{ 11|sub:forloop.counter }} name="creative-star"/>
+                                <label class="star creative-star-{{ 11|sub:forloop.counter }}"
+                                       for="creative-star-{{ 11|sub:forloop.counter }}"></label>
+                                {% endfor %}
+                            </div>
+                            <div class="col-2">
+                                <button type="submit" class="btn btn-primary" style="margin-top:8px">
+                                    rate</button>
+                            </div>
                         </div>
-                </div>
-                <div class="informative-star-rating">
-                        <div class="col-md-8">
-                            <input class="star informative-star-5" id="informative-star-5" type="radio" value="5" name="informative-star"/>
-                            <label class="star informative-star-5" for="informative-star-5"></label>
-                            <input class="star informative-star-4" id="informative-star-4" type="radio" value="4" name="informative-star"/>
-                            <label class="star informative-star-4" for="informative-star-4"></label>
-                            <input class="star informative-star-3" id="informative-star-3" type="radio" value="3" name="informative-star"/>
-                            <label class="star informative-star-3" for="informative-star-3"></label>
-                            <input class="star informative-star-2" id="informative-star-2" type="radio" value="2" name="informative-star"/>
-                            <label class="star informative-star-2" for="informative-star-2"></label>
-                            <input class="star informative-star-1" id="informative-star-1" type="radio" value="1" name="informative-star"/>
-                            <label class="star informative-star-1" for="informative-star-1"></label>
-                        </div>
-                    <button type="submit" class="btn btn-primary"> rate </button>
                     </form>
                 </div>
             </div>
-
-            <div class="modal-footer">
-            </div>
+            <!--<div class="modal-footer">-->
+            <!--</div>-->
         </div>
     </div>
 </div>
